[tool.poetry]
name = "whw11"
version = "0.1.0"
description = ""
authors = ["Andrii <akashyren77@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
package-name = "^0.1"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.20"
psycopg2 = "^2.9.7"
alembic = "^1.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
